# crewai-contact-center

./: .env  .env.example  .gitignore  INDEX.md  README.md  pyproject.toml
src/crewai_contact_center/: crew.py  main.py  tools.py
src/crewai_contact_center.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/crewai_contact_center/config/: agents.yaml  tasks.yaml
